@@ -20,7 +20,7 @@
 \
 \ ==============================================================================
 \ 
-\  $Date: 2007-11-11 07:41:31 $ $Revision: 1.11 $
+\  $Date: 2007-11-17 07:47:22 $ $Revision: 1.12 $
 \
 \ ==============================================================================
 
@@ -39,7 +39,7 @@ include ffl/hcn.fs
 
   
 
-1 constant hct.version
+2 constant hct.version
 
 
 ( Hash table structure )
